--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,10 +1,29 @@
-echoln "[autoexec.cfg] Start of autoexec.cfg";
+echo "[autoexec.cfg] Start of autoexec.cfg";
 
 
 
-echoln "[autoexec.cfg] {1} Executing config: './config/loader.cfg'!";
+// ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! !
+// !                                               !
+// ! This autoexec.cfg file has two purposes:      !
+// !                                               !
+// ! 1. Start the loader.cfg to load other cfgs    !
+// !                                               !
+// ! 2. **TEMPORARILY** initialize fin_echo.       !
+// !    DON'T CHANGE IT'S VALUE HERE. it will be   !
+// !    overridden later in init.cfg, so go there  !
+// !    and change it to `echo` instead if that's  !
+// !    your preference.                           !
+// !                                               !
+// ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! !
+
+
+echo "[autoexec.cfg] {1} Temporarily setting preferred echo type to echoln";
+alias "fin_echo" "echoln";                                      // Allows easy changing between echo and echoln commands.
+
+
+fin_echo "[autoexec.cfg] {2} Executing config: './config/loader.cfg'!";
 exec "./config/loader.cfg";
 
 
 
-echoln "[autoexec.cfg] End of autoexec.cfg";
+fin_echo "[autoexec.cfg] End of autoexec.cfg";
