--- a/boot.cfg
+++ b/boot.cfg
@@ -1,10 +1,10 @@
-echoln "[boot.cfg] Start of boot.cfg";
+fin_echo "[boot.cfg] Start of boot.cfg";
 
 
 
-echoln "[boot.cfg] {1} Executing practice config for convenient defaults";
+fin_echo "[boot.cfg] {1} Executing practice config for convenient defaults";
 exec "./practice.cfg";
 
 
 
-echoln "[boot.cfg] Start of boot.cfg";
+fin_echo "[boot.cfg] Start of boot.cfg";
