--- a/config/aliases/aliases_items.cfg
+++ b/config/aliases/aliases_items.cfg
@@ -1,13 +1,13 @@
-echoln "[aliases_items.cfg] Start of aliases_items.cfg";
+fin_echo "[aliases_items.cfg] Start of aliases_items.cfg";
 
 
-echoln "[aliases_items.cfg] {1} Registering quick buy aliases";
+fin_echo "[aliases_items.cfg] {1} Registering quick buy aliases";
 alias "fin_rifle"    "buy vest; buy m4a1_silencer; buy defuser; buy vesthelm";
 alias "fin_sniper"   "buy vest; buy awp; buy vesthelm; buy defuser";
 alias "fin_griefing" "buy deagle; buy taser; buy flashbang; buy smokegrenade; buy flashbang; buy vest; buy vesthelm; buy decoy; fin_streamermode_off";
 
 
-echoln "[aliases_items.cfg] {2} Registering improved grenade aliases";
+fin_echo "[aliases_items.cfg] {2} Registering improved grenade aliases";
 alias "fin_molotov"   "fin_nadexhon; buy molotov;      use weapon_molotov; use weapon_incgrenade";
 alias "fin_smoke"     "fin_nadexhon; buy smokegrenade; use weapon_smokegrenade";
 alias "fin_flashbang" "fin_nadexhon; buy flashbang;    use weapon_flashbang";
@@ -15,7 +15,7 @@ alias "fin_hegrenade" "fin_nadexhon; buy hegrenade;    use weapon_hegrenade";
 alias "fin_decoy"     "fin_nadexhon; buy decoy;        use weapon_decoy";
 
 
-echoln "[aliases_items.cfg] {3} Registering vanilla knife spawning binds";
+fin_echo "[aliases_items.cfg] {3} Registering vanilla knife spawning binds";
 alias "+fin_wpn_bayonet"        "mp_drop_knife_enable true; give weapon_knife; subclass_change 500 weapon_knife; drop";
 alias "-fin_wpn_bayonet"        "fin_clear_lookatweapon; slot3";
 
@@ -81,4 +81,4 @@ alias "-fin_wpn_kukri"          "fin_clear_lookatweapon; slot3";
 
 
 
-echoln "[aliases_items.cfg] End of aliases_items.cfg";
+fin_echo "[aliases_items.cfg] End of aliases_items.cfg";
