--- a/config/keys/60percentrow5.cfg
+++ b/config/keys/60percentrow5.cfg
@@ -1,8 +1,8 @@
-echoln "[60percentrow5.cfg] Start of 60percentrow5.cfg";
+fin_echo "[60percentrow5.cfg] Start of 60percentrow5.cfg";
 
 
 
-echoln "[60percentrow5.cfg] ";
+fin_echo "[60percentrow5.cfg] ";
 bind "SHIFT";
 bind "Z";
 bind "X";
@@ -15,8 +15,8 @@ bind ".";
 bind ",";
 bind "/";
 bind "RSHIFT";
-echoln "[60percentrow5.cfg] ";
+fin_echo "[60percentrow5.cfg] ";
 
 
 
-echoln "[60percentrow5.cfg] End of 60percentrow5.cfg";
+fin_echo "[60percentrow5.cfg] End of 60percentrow5.cfg";
