--- a/config/keys/60percentrow6.cfg
+++ b/config/keys/60percentrow6.cfg
@@ -1,8 +1,8 @@
-echoln "[60percentrow6.cfg] Start of 60percentrow6.cfg";
+fin_echo "[60percentrow6.cfg] Start of 60percentrow6.cfg";
 
 
 
-echoln "[60percentrow6.cfg] ";
+fin_echo "[60percentrow6.cfg] ";
 bind "CTRL";
 bind "LWIN";
 bind "ALT";
@@ -11,8 +11,8 @@ bind "RALT";
 bind "RWIN";
 bind "APP";
 bind "RCTRL";
-echoln "[60percentrow6.cfg] ";
+fin_echo "[60percentrow6.cfg] ";
 
 
 
-echoln "[60percentrow6.cfg] End of 60percentrow6.cfg";
+fin_echo "[60percentrow6.cfg] End of 60percentrow6.cfg";
