--- a/config/keys/80percentkeys.cfg
+++ b/config/keys/80percentkeys.cfg
@@ -1,9 +1,9 @@
-echoln "[60percentrow7.cfg] Start of 60percentrow7.cfg";
+fin_echo "[60percentrow7.cfg] Start of 60percentrow7.cfg";
 
 
 
-echoln "[60percentrow7.cfg] ";
-echoln "[60percentrow7.cfg] No key for prtsc";
+fin_echo "[60percentrow7.cfg] ";
+fin_echo "[60percentrow7.cfg] No key for prtsc";
 bind "SCROLLLOCK";
 bind "NUMLOCK";
 bind "INS";
@@ -16,8 +16,8 @@ bind "UPARROW";
 bind "LEFTARROW";
 bind "DOWNARROW";
 bind "RIGHTARROW";
-echoln "[60percentrow7.cfg] ";
+fin_echo "[60percentrow7.cfg] ";
 
 
 
-echoln "[60percentrow7.cfg] End of 60percentrow7.cfg";
+fin_echo "[60percentrow7.cfg] End of 60percentrow7.cfg";
