--- a/config/keys/joystickbinds.cfg
+++ b/config/keys/joystickbinds.cfg
@@ -1,8 +1,8 @@
-echoln "[joystickbinds.cfg] Start of joystickbinds.cfg";
+fin_echo "[joystickbinds.cfg] Start of joystickbinds.cfg";
 
 
 
-echoln "[joystickbinds.cfg] ";
+fin_echo "[joystickbinds.cfg] ";
 bind "A_BUTTON";
 bind "B_BUTTON";
 bind "X_BUTTON";
@@ -21,8 +21,8 @@ bind "UP";
 bind "DOWN";
 bind "LEFT";
 bind "RIGHT";
-echoln "[joystickbinds.cfg] ";
+fin_echo "[joystickbinds.cfg] ";
 
 
 
-echoln "[joystickbinds.cfg] End of joystickbinds.cfg";
+fin_echo "[joystickbinds.cfg] End of joystickbinds.cfg";
