--- a/config/primary/audio.cfg
+++ b/config/primary/audio.cfg
@@ -1,8 +1,8 @@
-echoln "[audio.cfg] Start of audio.cfg";
+fin_echo "[audio.cfg] Start of audio.cfg";
 
 
 
-echoln "[audio.cfg] {1} Adjusting volume levels";
+fin_echo "[audio.cfg] {1} Adjusting volume levels";
 snd_mapobjective_volume "0.0025";                               // Changes the "bomb..planted" and "taken..hostage" voice over volume (Max is 0.60, .006 is 1% of that)
 snd_tensecondwarning_volume "0";                                // Changes the ten second warning music volume (Max is 0.60, .06 is 10% of that)
 snd_deathcamera_volume "0.0025";                                // Changes the death camera music volume (Max is 0.60, .03 is 5% of that)
@@ -33,9 +33,8 @@ snd_mvp_volume "0.03";                                          // Changes the m
 // %100 = 1
 
 
-echoln "[audio.cfg] {2} Changing miscellaneous sound settings";
+fin_echo "[audio.cfg] {2} Changing miscellaneous sound settings";
 sv_ignoregrenaderadio "true";                                   // Turn off Fire in the hole messages
-snd_mix_async "true";                                        // 0: Synchronous sound mixing (for CPUs with very few threads) 1: Asynchronous sound mixing (for CPUs with many threads)
 snd_headphone_eq "1";                                           // Select Headphone EQ Preset (0: Natural, 1: Crisp, 2: Smooth)
 snd_steamaudio_enable_perspective_correction "true";            // Enable perspective correction for 3D audio.
 snd_spatialize_lerp "0";                                        // "L/R Isolation" in-game audio setting
@@ -44,9 +43,10 @@ snd_mixahead "0.0032766439253464310";                           // Lower = less 
 snd_mute_mvp_music_live_players "true";                         // If set, MVP music is muted if players from both teams are still alive.
 voice_always_sample_mic "true";                                 // For systems experiencing a hang/stall when using voice chat.
 voice_threshold "0";
-bot_chatter "off";                                               // Control how bots talk. Allowed values: 'off', 'radio', 'minimal', or 'normal'.
+bot_chatter "off";                                              // Control how bots talk. Allowed values: 'off', 'radio', 'minimal', or 'normal'.
+// snd_mix_async "true";                                        // [developmentonly] 0: Synchronous sound mixing (for CPUs with very few threads) 1: Asynchronous sound mixing (for CPUs with many threads)
 // For snd_spatialize_lerp:
 // - 0% - Physically Accurate (default): Physically modeled sound panning behavior most accurately reflecting the emitter position.
 // - 100% - Isolated L/R: Sound emitters that are directly to the side of the player will be hard panned with minimal blending into the opposite L/R channel. This provides a strong sense of left vs right but can be positionally misleading at certain angles to the listener. For players who prefer legacy sound panning behaviour.
 
-echoln "[audio.cfg] End of audio.cfg";
+fin_echo "[audio.cfg] End of audio.cfg";
