--- a/config/primary/binds.cfg
+++ b/config/primary/binds.cfg
@@ -1,14 +1,14 @@
-echoln "[binds.cfg] Start of binds.cfg";
+fin_echo "[binds.cfg] Start of binds.cfg";
 
 
 
-echoln "[binds.cfg] {1} Resetting binds";
+fin_echo "[binds.cfg] {1} Resetting binds";
 input_button_code_is_scan_code "true";                          // Bind keys based on keyboard position instead of key name
 binddefaults;                                                   // Bind all keys to their default values.
 unbindall;	                                                    // Unbind all keys.
 
 
-echoln "[binds.cfg] {2} Configuring binds for keyboard row 1";
+fin_echo "[binds.cfg] {2} Configuring binds for keyboard row 1";
 bind "escape"         "cancelselect;                                                        ; fin_keycontainer";                    // This is the esc key
 bind "F1"             "+fin_desubtick_radialradio2;                                         ; fin_keycontainer";                    // This is the F1  key
 bind "F2"             "+fin_desubtick_radialradio3;                                         ; fin_keycontainer";                    // This is the F2  key
@@ -27,7 +27,7 @@ bind "SCROLLLOCK"     "exec ./practice.cfg; exec ./config/utility/skinpictures.c
 bind "NUMLOCK"        "                                                                     ; fin_keycontainer";                    // This is the pause key (why valve)
 
 
-echoln "[binds.cfg] {3} Configuring binds for keyboard row 2";
+fin_echo "[binds.cfg] {3} Configuring binds for keyboard row 2";
 bind "`"              "toggleconsole"                                                                                               // This is the grave key
 bind "1"              "+fin_knife; fin_nadexhoff; fin_vmp_highfov;                          ; fin_keycontainer";                    // This is the 1 key
 bind "2"              "fin_clear_lookatweapon; fin_nadexhoff; slot3; slot2; slot1; fin_vmp_highfov;            ; fin_keycontainer"; // This is the 2 key
@@ -51,7 +51,7 @@ bind "KP_MULTIPLY"    "exec ./config/utility/clear.cfg; exec ./practice.cfg;    
 bind "KP_MINUS"       "condump; exec ./autoexec.cfg; fin_blockscreen_off;                   ; fin_keycontainer";                    // This is the Numpad - key
 
 
-echoln "[binds.cfg] {4} Configuring binds for keyboard row 3";
+fin_echo "[binds.cfg] {4} Configuring binds for keyboard row 3";
 bind "TAB"            "+fin_scorenet; +showscores;                                          ; fin_keycontainer";                    // This is the tab key
 bind "Q"              "cyclevar fps_max 0 32;                                               ; fin_keycontainer";                    // This is the q key
 bind "W"              "fin_nadexhon; slot10;                                                ; fin_keycontainer";                    // This is the w key
@@ -75,7 +75,7 @@ bind "KP_9"           "incrementvar viewmodel_offset_z -2 2   0.25;             
 bind "KP_PLUS"        "                                                                     ; fin_keycontainer";                    // This is the Numpad + key
 
 
-echoln "[binds.cfg] {5} Configuring binds for keyboard row 4";
+fin_echo "[binds.cfg] {5} Configuring binds for keyboard row 4";
 bind "CAPSLOCK"       "                                                                     ; fin_keycontainer";                    // This is the caps lock key
 bind "A"              "                                                                     ; fin_keycontainer";                    // This is the a key
 bind "S"              "+fin_ncmleft;                                                        ; fin_keycontainer";                    // This is the s key
@@ -95,7 +95,7 @@ bind "KP_6"           "viewmodel_offset_z 0;                                    
 // ** Numpad + key is in section [7.2] **
 
 
-echoln "[binds.cfg] {6} Configuring binds for keyboard row 5";
+fin_echo "[binds.cfg] {6} Configuring binds for keyboard row 5";
 bind "SHIFT"          "+fin_loudshift;                                                      ; fin_keycontainer";                    // This is the left shift key
 bind "Z"              "noclip;                                                              ; fin_keycontainer";                    // This is the z key
 bind "X"              "fin_nadexhon; slot7;                                                 ; fin_keycontainer";                    // This is the x key
@@ -115,7 +115,7 @@ bind "KP_3"           "incrementvar viewmodel_offset_z -2 2   -0.25;            
 bind "KP_ENTER"       "fin_butt;                                                            ; fin_keycontainer";                    // This is the Numpad enter/return key
 
 
-echoln "[binds.cfg] {7} Configuring binds for keyboard row 6";
+fin_echo "[binds.cfg] {7} Configuring binds for keyboard row 6";
 bind "CTRL"           "+fin_desubtick_duck;                                                 ; fin_keycontainer";                    // This is the left control key
 bind "LWIN"           "                                                                     ; fin_keycontainer";                    // This is the windows (os) key to the left of the spacebar
 bind "ALT"            "                                                                     ; fin_keycontainer";                    // This is the left alt key
@@ -132,7 +132,7 @@ bind "KP_DEL"         "fin_ahegao;                                              
 // ** Numpad enter key is in section [7.4] **
 
 
-echoln "[binds.cfg] {8} Configuring binds for the mouse";
+fin_echo "[binds.cfg] {8} Configuring binds for the mouse";
 bind "MOUSE1"         "+fin_desubtick_attack;                                               ; fin_keycontainer";                    // This is the left click button
 bind "MOUSE2"         "+fin_desubtick_attack2; fin_clear_lookatweapon;                      ; fin_keycontainer";                    // This is the right click button
 bind "MOUSE3"         "player_ping;                                                         ; fin_keycontainer";                    // This is the mouse wheel click button
@@ -144,7 +144,7 @@ bind "MOUSE_X"        "fin_onmousemove; yaw";                                   
 bind "MOUSE_Y"        "fin_onmousemove; pitch";                                                                                     // This is activated whenever the mouse is moved up/down
 
 
-echoln "[binds.cfg] {9} Configuring binds for controllers";
+fin_echo "[binds.cfg] {9} Configuring binds for controllers";
 bind "JOY1"       "+fin_cjump;                                                          ; fin_keycontainer";                    // This is the A button on Xbox Controllers
 bind "JOY2"       "+fin_betteruse;                                                      ; fin_keycontainer";                    // This is the B button on Xbox Controllers
 bind "JOY3"       "+fin_desubtick_reload; fin_clear_lookatweapon;                       ; fin_keycontainer";                    // This is the X button on Xbox Controllers
@@ -189,4 +189,4 @@ bind "POV_RIGHT"	"invprev;                                                      
 
 
 
-echoln "[binds.cfg] End of binds.cfg";
+fin_echo "[binds.cfg] End of binds.cfg";
