--- a/config/primary/controls.cfg
+++ b/config/primary/controls.cfg
@@ -1,8 +1,8 @@
-echoln "[controls.cfg] Start of controls.cfg";
+fin_echo "[controls.cfg] Start of controls.cfg";
 
 
 
-echoln "[controls.cfg] {1} Changing mouse and sensitivity settings";
+fin_echo "[controls.cfg] {1} Changing mouse and sensitivity settings";
 zoom_sensitivity_ratio "0.818933027098955175";                  // Additional mouse sensitivity scale factor applied when FOV is zoomed in. See https://www.reddit.com/r/GlobalOffensive/comments/43urd4
 cl_sniper_delay_unscope "false";                                // 0: Instantly unscope on fire 1: Delay visual unscope after firing
 cl_debounce_zoom "false";                                       // Whether or not to disable holding secondary fire to cycle zoom levels
@@ -25,11 +25,11 @@ m_yaw "0.022";                                                  // Mouse yaw fac
 // eDPI / yourMousesHighestPossibleDPI = newSensitivty
 
 
-echoln "[controls.cfg] {2} Other controls";
+fin_echo "[controls.cfg] {2} Other controls";
 cl_scoreboard_mouse_enable_binding "+fin_desubtick_attack2";    // Name of the binding to enable mouse selection in the scoreboard
 option_speed_method "false";                                    // Input toggle control
 option_duck_method "false";                                     // Input toggle control
 
 
 
-echoln "[controls.cfg] End of controls.cfg";
+fin_echo "[controls.cfg] End of controls.cfg";
