--- a/config/primary/debug.cfg
+++ b/config/primary/debug.cfg
@@ -1,43 +1,43 @@
-echoln "[debug.cfg] Start of debug.cfg";
+fin_echo "[debug.cfg] Start of debug.cfg";
 
 
 
-echoln "[debug.cfg] {1} Printing debug information and saving console log";
-echoln "[debug.cfg]  ";
+fin_echo "[debug.cfg] {1} Printing debug information and saving console log";
+fin_echo "[debug.cfg]  ";
 sys_info;                                                       // Print system information to the console
-echoln "[debug.cfg]  ";
+fin_echo "[debug.cfg]  ";
 demo_info;                                                      // Print version info string.
-echoln "[debug.cfg]  ";
+fin_echo "[debug.cfg]  ";
 status;                                                         // Print connection status
-echoln "[debug.cfg]  ";
+fin_echo "[debug.cfg]  ";
 status_json;                                                    // Print status in JSON format
-echoln "[debug.cfg]  ";
+fin_echo "[debug.cfg]  ";
 net_status;                                                     // Shows current network status
-echoln "[debug.cfg]  ";
+fin_echo "[debug.cfg]  ";
 tv_broadcast_status;                                            // Print out broadcast status
-echoln "[debug.cfg]  ";
+fin_echo "[debug.cfg]  ";
 tv_status;                                                      // Show SourceTV server status.
-echoln "[debug.cfg]  ";
+fin_echo "[debug.cfg]  ";
 demo_info;                                                      // Print information about currently playing demo.
-echoln "[debug.cfg]  ";
+fin_echo "[debug.cfg]  ";
 soundinfo;                                                      // Describe the current sound device with an active voice list.
-echoln "[debug.cfg]  ";
+fin_echo "[debug.cfg]  ";
 install_dlc_workshoptools_cvar;                                 // DLC Install Status
-echoln "[debug.cfg]  ";
+fin_echo "[debug.cfg]  ";
 trusted_launch;                                                 // Trusted launch status
-echoln "[debug.cfg]  ";
+fin_echo "[debug.cfg]  ";
 hostname;                                                       // Hostname for server.
-echoln "[debug.cfg]  ";
+fin_echo "[debug.cfg]  ";
 name;
-echoln "[debug.cfg]  ";
+fin_echo "[debug.cfg]  ";
 tv_name;                                                        // SourceTV host name
-echoln "[debug.cfg]  ";
+fin_echo "[debug.cfg]  ";
 tv_title;                                                       // Set title for SourceTV spectator UI
-echoln "[debug.cfg]  ";
+fin_echo "[debug.cfg]  ";
 condump;                                                        // dump the text currently in the console to condumpXX.log
 
 
-echoln "[debug.cfg] {2} Clearing and resetting with various defensive commands";
+fin_echo "[debug.cfg] {2} Clearing and resetting with various defensive commands";
 _resetgamestats;                                                // Erases current game stats and writes out a blank stats file
 bugvoice_clear;                                                 // Clear voice attachment data.
 cc_flush;                                                       // Flushes async'd captions.
@@ -70,14 +70,13 @@ vprof_reset_peaks;                                              // Reset just th
 vprof_reset;                                                    // Reset the stats in VProf profiler
 
 
-echoln "[debug.cfg] {3} Clearing and resetting with various cheat commands";
+fin_echo "[debug.cfg] {3} Clearing and resetting with various cheat commands";
 cl_ent_clear_debug_overlays;                                    // Clears all debug overlays
 cl_ent_text_sticky_clear;                                       // Clears the list of names to display text debugging information about the given entity(ies) on top of the entity (See Overlay Text) Arguments: {entity_name} / {class_name} / {entity_index} / {no argument = pick what player is looking at}
 cl_script_clear_watches;                                        // Clear all watches from the game debug overlay
 cl_ent_text_clear;                                              // Hide text debugging information about the given entity(ies) on top of the entity (See Overlay Text) Arguments: {entity_name} / {class_name} / {entity_index} / {no argument = pick what player is looking at}
 clear_bombs;
 ent_text_clear;                                                 // Hide text debugging information about the given entity(ies) on top of the entity (See Overlay Text) Arguments: {entity_name} / {class_name} / {entity_index} / {no argument = pick what player is looking at}
-nav_clear_attribute;                                            // Remove given nav attribute from all areas in the selected set.
 script_clear_watches;                                           // Clear all watches from the game debug overlay
 snd_soundevent_clear_deferred;                                  // Clear the list of deferred soundevents for loading.
 snd_vmidi_flush;                                                // Purge and reload all vmidi data and files.
@@ -90,7 +89,7 @@ reloadgame;                                                     // Reload the mo
 rr_reloadresponsesystems;                                       // Reload all response system scripts.
 
 
-echoln "[debug.cfg] {4} Clearing and resetting with various unprotected commands";
+fin_echo "[debug.cfg] {4} Clearing and resetting with various unprotected commands";
 //unbindall;	                                                  // Unbind all keys.
 //binddefaults;                                                 // Bind all keys to their default values.
 //clear;    // hides debug data                                 // Clear console output.
@@ -99,4 +98,4 @@ mp_bot_ai_bt_clear_cache;                                       // Clears the ca
 
 
 
-echoln "[debug.cfg] End of debug.cfg";
+fin_echo "[debug.cfg] End of debug.cfg";
