--- a/config/primary/misc.cfg
+++ b/config/primary/misc.cfg
@@ -1,8 +1,8 @@
-echoln "[misc.cfg] Start of misc.cfg";
+fin_echo "[misc.cfg] Start of misc.cfg";
 
 
 
-echoln "[misc.cfg] {1} Changing console settings";
+fin_echo "[misc.cfg] {1} Changing console settings";
 sv_merge_changes_after_tick_with_calcdelta "2";                 // This fixes bugs where pure calcdelta is used due to recipient changing but it doesn't pick up a field change where the value was changed back to same value as the from snapshot even though the destination fields change list does note the change. Set to 2 to spew any changes merged in by this fix.
 sv_record_item_time_data "true";                                // Turn on recording of per player item time data into the server log.
 sv_log_onefile "true";                                          // Log server information to only one file.
@@ -18,12 +18,12 @@ cl_error_report_time "10";                                      // Minimum time 
 fs_report_sync_opens "1";                                       // 0:Off, 1:Always, 2:Not during load
 
 
-echoln "[misc.cfg] {2} Disabling random game instructor tips (but keeping burst and bomb notifications)";
+fin_echo "[misc.cfg] {2} Disabling random game instructor tips (but keeping burst and bomb notifications)";
 gameinstructor_enable "false";                                  // Display in game lessons that teach new players.
 cl_autohelp "true";                                             // Show bomb pickup and burst toggle notifications
 
 
-echoln "[misc.cfg] {3} Miscellaneous tweaks";
+fin_echo "[misc.cfg] {3} Miscellaneous tweaks";
 player_nevershow_communityservermessage "1";                    // Disables the "these are community run servers be careful"-esque message when you go to the community browser
 mm_csgo_community_search_players_min "10";                      // When performing CSGO community matchmaking look for servers with at least so many human players
 cl_show_clan_in_death_notice "true";                            // If set, the clan name will show next to player names in the kill feed.
@@ -43,7 +43,7 @@ sv_competitive_minspec "true";                                  // Enable to for
 sv_holiday_mode "0";                                            // 0 = OFF, 1 = Halloween, 2 = Winter
 
 
-echoln "[misc.cfg] {4} Finishing up";
+fin_echo "[misc.cfg] {4} Finishing up";
 exec "./config/utility/grammarly/disconnect.cfg";                  // "Autocorrect" aliases for the disconnect command
 exec "./config/utility/grammarly/exit.cfg";                        // "Autocorrect" aliases for the exit command
 exec "./config/utility/grammarly/quit.cfg";                        // "Autocorrect" aliases for the quit command
@@ -53,4 +53,4 @@ game_mode "1";                                                  // The current g
 
 
 
-echoln "[misc.cfg] End of misc.cfg";
+fin_echo "[misc.cfg] End of misc.cfg";
