--- a/config/primary/safety.cfg
+++ b/config/primary/safety.cfg
@@ -1,8 +1,8 @@
-echoln "[safety.cfg] Start of safety.cfg";
+fin_echo "[safety.cfg] Start of safety.cfg";
 
 
 
-echoln "[safety.cfg] {1} Privacy & safety settings";
+fin_echo "[safety.cfg] {1} Privacy & safety settings";
 cl_mute_all_but_friends_and_party "0";                          // Only allow communication from friends and matchmaking party members. Set to 1 to apply the in non-competitive game modes. Set to 2 will apply the setting in all modes.
 cl_server_graphic1_enable "false";                              // When enabled, 360x60 (<16kb) image file will be displayed to on-server spectators.
 cl_server_graphic2_enable "false";                              // When enabled, 220x45 (<16kb) image file will be displayed to on-server spectators.
@@ -50,4 +50,4 @@ cl_chatfilters "2147483647";
 
 
 
-echoln "[safety.cfg] End of safety.cfg";
+fin_echo "[safety.cfg] End of safety.cfg";
