--- a/config/primary/ui.cfg
+++ b/config/primary/ui.cfg
@@ -1,8 +1,8 @@
-echoln "[ui.cfg] Start of ui.cfg";
+fin_echo "[ui.cfg] Start of ui.cfg";
 
 
 
-echoln "[ui.cfg] {1} Changing the radar";
+fin_echo "[ui.cfg] {1} Changing the radar";
 cl_radar_square_with_scoreboard "false";                        // If set, the radar will toggle to square when the scoreboard is visible.
 cl_radar_always_centered "false";                               // If set to 0, the radar is maximally used. Otherwise the player is always centered, even at map extents.
 cl_radar_icon_scale_min "0.4";                                  // Sets the minimum icon scale. Valid values are 0.4 to 1.25.
@@ -11,7 +11,7 @@ cl_radar_rotate "false";                                        // Enables/disab
 cl_radar_scale "0.4";                                           // Sets the radar scale. Valid values are 0.25 to 1.0.
 
 
-echoln "[ui.cfg] {2} Changing the crosshair";                   // Slightly tweaked version of the one from here: https://www.reddit.com/comments/3pyf1f
+fin_echo "[ui.cfg] {2} Changing the crosshair";                   // Slightly tweaked version of the one from here: https://www.reddit.com/comments/3pyf1f
 cl_crosshair_sniper_show_normal_inaccuracy "true";              // Include standing inaccuracy when determining sniper crosshair blur
 cl_crosshair_dynamic_splitalpha_outermod "0.5";                 // If using cl_crosshairstyle 2, this is the alpha modification that will be used for the OUTER crosshair pips once they've split.
 cl_crosshair_dynamic_splitalpha_innermod "1";                   // If using cl_crosshairstyle 2, this is the alpha modification that will be used for the INNER crosshair pips once they've split.
@@ -40,7 +40,7 @@ crosshair  "true";
 fin_blockscreen_on;
 
 
-echoln "[ui.cfg] {3} Adjusting the HUD";
+fin_echo "[ui.cfg] {3} Adjusting the HUD";
 cl_teamcounter_playercount_instead_of_avatars "true";
 cl_show_equipped_character_for_player_avatars "true";
 cl_scoreboard_survivors_always_on "true";                       // Fixes a problem calculating the number of dead players when rounds end
@@ -68,7 +68,7 @@ ui_steam_overlay_notification_position_horz "80";               // Steam overlay
 ui_steam_overlay_notification_position "topright";              // Steam overlay notification position
 
 
-echoln "[ui.cfg] {3} Final HUD Adjustments";
+fin_echo "[ui.cfg] {3} Final HUD Adjustments";
 cl_hud_color "12";                                              // Sets the hud color to show player colors
 //
 // cl_hud_color 0   = VARIES (RRR, GGG, BBB) CT Blue (97c9fa (151, 201, 250)) or T Orange (eabf55 (234, 191, 85)) (based on side)
@@ -125,4 +125,4 @@ cl_inventory_saved_sort2 "inv_sort_rarity"
 
 
 
-echoln "[ui.cfg] End of ui.cfg";
+fin_echo "[ui.cfg] End of ui.cfg";
