--- a/config/prog/prog_binds.cfg
+++ b/config/prog/prog_binds.cfg
@@ -1,4 +1,4 @@
-echoln "[prog_binds.cfg] Start of prog_binds.cfg";
+fin_echo "[prog_binds.cfg] Start of prog_binds.cfg";
 
 
 
@@ -142,4 +142,4 @@ bind "RIGHT"	       "+fin_key_RIGHT;          fin_key_RIGHT;          fin_keys_d
 
 
 
-echoln "[prog_binds.cfg] End of prog_binds.cfg";
+fin_echo "[prog_binds.cfg] End of prog_binds.cfg";
