--- a/config/rainbow_crosshair/rainbow_crosshair_1.cfg
+++ b/config/rainbow_crosshair/rainbow_crosshair_1.cfg
@@ -1,3 +1,4 @@
+fin_echo "[rainbow_crosshair_1.cfg] Start of rainbow_crosshair_1.cfg";
 alias "fin_rainbow_crosshair_0"   "cl_crosshaircolor_r 128; cl_crosshaircolor_g  18; cl_crosshaircolor_b 237; alias fin_rainbow_crosshair   fin_rainbow_crosshair_1";
 alias "fin_rainbow_crosshair_1"   "cl_crosshaircolor_r 129; cl_crosshaircolor_g  17;                          alias fin_rainbow_crosshair   fin_rainbow_crosshair_2";
 alias "fin_rainbow_crosshair_2"   "cl_crosshaircolor_r 130; cl_crosshaircolor_g  16; cl_crosshaircolor_b 236; alias fin_rainbow_crosshair   fin_rainbow_crosshair_3";
@@ -100,3 +101,7 @@ alias "fin_rainbow_crosshair_98"  "                                             
 alias "fin_rainbow_crosshair_99"  "cl_crosshaircolor_r 224; cl_crosshaircolor_g   8; cl_crosshaircolor_b 151; alias fin_rainbow_crosshair fin_rainbow_crosshair_100";
 alias "fin_rainbow_crosshair_100" "cl_crosshaircolor_r 225;                          cl_crosshaircolor_b 150; alias fin_rainbow_crosshair fin_rainbow_crosshair_101";
 // Credit to https://github.com/T1ckbase/cs2-rainbow-crosshair for smoother values
+
+
+
+fin_echo "[rainbow_crosshair_1.cfg] End of rainbow_crosshair_1.cfg";
