--- a/config/rainbow_crosshair/rainbow_crosshair_2.cfg
+++ b/config/rainbow_crosshair/rainbow_crosshair_2.cfg
@@ -1,3 +1,7 @@
+fin_echo "[rainbow_crosshair_2.cfg] Start of rainbow_crosshair_2.cfg";
+
+
+
 alias "fin_rainbow_crosshair_101" "                         cl_crosshaircolor_g   9; cl_crosshaircolor_b 148; alias fin_rainbow_crosshair fin_rainbow_crosshair_102";
 alias "fin_rainbow_crosshair_102" "cl_crosshaircolor_r 226;                          cl_crosshaircolor_b 147; alias fin_rainbow_crosshair fin_rainbow_crosshair_103";
 alias "fin_rainbow_crosshair_103" "cl_crosshaircolor_r 227;                          cl_crosshaircolor_b 146; alias fin_rainbow_crosshair fin_rainbow_crosshair_104";
@@ -100,3 +104,7 @@ alias "fin_rainbow_crosshair_199" "                         cl_crosshaircolor_g 
 alias "fin_rainbow_crosshair_200" "                         cl_crosshaircolor_g  84; cl_crosshaircolor_b  46; alias fin_rainbow_crosshair fin_rainbow_crosshair_201";
 alias "fin_rainbow_crosshair_201" "cl_crosshaircolor_r 252; cl_crosshaircolor_g  85; cl_crosshaircolor_b  45; alias fin_rainbow_crosshair fin_rainbow_crosshair_202";
 // Credit to https://github.com/T1ckbase/cs2-rainbow-crosshair for smoother values
+
+
+
+fin_echo "[rainbow_crosshair_2.cfg] End of rainbow_crosshair_2.cfg";
