--- a/config/rainbow_crosshair/rainbow_crosshair_3.cfg
+++ b/config/rainbow_crosshair/rainbow_crosshair_3.cfg
@@ -1,3 +1,7 @@
+fin_echo "[rainbow_crosshair_3.cfg] Start of rainbow_crosshair_3.cfg";
+
+
+
 alias "fin_rainbow_crosshair_202" "                         cl_crosshaircolor_g  86; cl_crosshaircolor_b  44; alias fin_rainbow_crosshair fin_rainbow_crosshair_203";
 alias "fin_rainbow_crosshair_203" "                         cl_crosshaircolor_g  87; cl_crosshaircolor_b  43; alias fin_rainbow_crosshair fin_rainbow_crosshair_204";
 alias "fin_rainbow_crosshair_204" "                         cl_crosshaircolor_g  88;                          alias fin_rainbow_crosshair fin_rainbow_crosshair_205";
@@ -100,3 +104,7 @@ alias "fin_rainbow_crosshair_300" "cl_crosshaircolor_r 191; cl_crosshaircolor_g 
 alias "fin_rainbow_crosshair_301" "cl_crosshaircolor_r 190; cl_crosshaircolor_g 192;                          alias fin_rainbow_crosshair fin_rainbow_crosshair_302";
 alias "fin_rainbow_crosshair_302" "cl_crosshaircolor_r 189; cl_crosshaircolor_g 193;                          alias fin_rainbow_crosshair fin_rainbow_crosshair_303";
 // Credit to https://github.com/T1ckbase/cs2-rainbow-crosshair for smoother values
+
+
+
+fin_echo "[rainbow_crosshair_3.cfg] End of rainbow_crosshair_3.cfg";
