--- a/config/rainbow_crosshair/rainbow_crosshair_5.cfg
+++ b/config/rainbow_crosshair/rainbow_crosshair_5.cfg
@@ -1,3 +1,7 @@
+fin_echo "[rainbow_crosshair_5.cfg] Start of rainbow_crosshair_5.cfg";
+
+
+
 alias "fin_rainbow_crosshair_404" "                                                  cl_crosshaircolor_b  49; alias fin_rainbow_crosshair fin_rainbow_crosshair_405";
 alias "fin_rainbow_crosshair_405" "cl_crosshaircolor_r  79;                          cl_crosshaircolor_b  50; alias fin_rainbow_crosshair fin_rainbow_crosshair_406";
 alias "fin_rainbow_crosshair_406" "cl_crosshaircolor_r  78; cl_crosshaircolor_g 254; cl_crosshaircolor_b  51; alias fin_rainbow_crosshair fin_rainbow_crosshair_407";
@@ -100,3 +104,7 @@ alias "fin_rainbow_crosshair_502" "cl_crosshaircolor_r   7; cl_crosshaircolor_g 
 alias "fin_rainbow_crosshair_503" "                                                  cl_crosshaircolor_b 153; alias fin_rainbow_crosshair fin_rainbow_crosshair_504";
 alias "fin_rainbow_crosshair_504" "                         cl_crosshaircolor_g 222; cl_crosshaircolor_b 154; alias fin_rainbow_crosshair fin_rainbow_crosshair_505";
 // Credit to https://github.com/T1ckbase/cs2-rainbow-crosshair for smoother values
+
+
+
+fin_echo "[rainbow_crosshair_5.cfg] End of rainbow_crosshair_5.cfg";
