--- a/config/rainbow_crosshair/rainbow_crosshair_6.cfg
+++ b/config/rainbow_crosshair/rainbow_crosshair_6.cfg
@@ -1,3 +1,7 @@
+fin_echo "[rainbow_crosshair_6.cfg] Start of rainbow_crosshair_6.cfg";
+
+
+
 alias "fin_rainbow_crosshair_505" "cl_crosshaircolor_r   6; cl_crosshaircolor_g 221; cl_crosshaircolor_b 155; alias fin_rainbow_crosshair fin_rainbow_crosshair_506";
 alias "fin_rainbow_crosshair_506" "                         cl_crosshaircolor_g 220; cl_crosshaircolor_b 156; alias fin_rainbow_crosshair fin_rainbow_crosshair_507";
 alias "fin_rainbow_crosshair_507" "                                                  cl_crosshaircolor_b 157; alias fin_rainbow_crosshair fin_rainbow_crosshair_508";
@@ -100,3 +104,7 @@ alias "fin_rainbow_crosshair_603" "                         cl_crosshaircolor_g 
 alias "fin_rainbow_crosshair_604" "cl_crosshaircolor_r  20; cl_crosshaircolor_g 123; cl_crosshaircolor_b 240; alias fin_rainbow_crosshair fin_rainbow_crosshair_605";
 alias "fin_rainbow_crosshair_605" "                         cl_crosshaircolor_g 122;                          alias fin_rainbow_crosshair fin_rainbow_crosshair_606";
 // Credit to https://github.com/T1ckbase/cs2-rainbow-crosshair for smoother values
+
+
+
+fin_echo "[rainbow_crosshair_6.cfg] End of rainbow_crosshair_6.cfg";
