--- a/config/rainbow_crosshair/rainbow_crosshair_7.cfg
+++ b/config/rainbow_crosshair/rainbow_crosshair_7.cfg
@@ -1,3 +1,7 @@
+fin_echo "[rainbow_crosshair_7.cfg] Start of rainbow_crosshair_7.cfg";
+
+
+
 alias "fin_rainbow_crosshair_606" "cl_crosshaircolor_r  21; cl_crosshaircolor_g 121; cl_crosshaircolor_b 241; alias fin_rainbow_crosshair fin_rainbow_crosshair_607";
 alias "fin_rainbow_crosshair_607" "                         cl_crosshaircolor_g 120;                          alias fin_rainbow_crosshair fin_rainbow_crosshair_608";
 alias "fin_rainbow_crosshair_608" "                         cl_crosshaircolor_g 119; cl_crosshaircolor_b 242; alias fin_rainbow_crosshair fin_rainbow_crosshair_609";
@@ -100,3 +104,7 @@ alias "fin_rainbow_crosshair_704" "cl_crosshaircolor_r 110; cl_crosshaircolor_g 
 alias "fin_rainbow_crosshair_705" "cl_crosshaircolor_r 111;                                                   alias fin_rainbow_crosshair fin_rainbow_crosshair_706";
 alias "fin_rainbow_crosshair_706" "cl_crosshaircolor_r 112; cl_crosshaircolor_g  26; cl_crosshaircolor_b 244; alias fin_rainbow_crosshair fin_rainbow_crosshair_707";
 // Credit to https://github.com/T1ckbase/cs2-rainbow-crosshair for smoother values
+
+
+
+fin_echo "[rainbow_crosshair_7.cfg] End of rainbow_crosshair_7.cfg";
