--- a/config/rainbow_crosshair/rainbow_crosshair_8.cfg
+++ b/config/rainbow_crosshair/rainbow_crosshair_8.cfg
@@ -1,3 +1,7 @@
+fin_echo "[rainbow_crosshair_8.cfg] Start of rainbow_crosshair_8.cfg";
+
+
+
 alias "fin_rainbow_crosshair_707" "cl_crosshaircolor_r 113;                                                   alias fin_rainbow_crosshair fin_rainbow_crosshair_708";
 alias "fin_rainbow_crosshair_708" "cl_crosshaircolor_r 114; cl_crosshaircolor_g  25;                          alias fin_rainbow_crosshair fin_rainbow_crosshair_709";
 alias "fin_rainbow_crosshair_709" "cl_crosshaircolor_r 115; cl_crosshaircolor_g  24; cl_crosshaircolor_b 243; alias fin_rainbow_crosshair fin_rainbow_crosshair_710";
@@ -12,3 +16,7 @@ alias "fin_rainbow_crosshair_717" "cl_crosshaircolor_r 124; cl_crosshaircolor_g 
 alias "fin_rainbow_crosshair_718" "cl_crosshaircolor_r 125;                                                   alias fin_rainbow_crosshair fin_rainbow_crosshair_719";
 alias "fin_rainbow_crosshair_719" "cl_crosshaircolor_r 126; cl_crosshaircolor_g  18; cl_crosshaircolor_b 238; alias fin_rainbow_crosshair   fin_rainbow_crosshair_0";
 // Credit to https://github.com/T1ckbase/cs2-rainbow-crosshair for smoother values
+
+
+
+fin_echo "[rainbow_crosshair_8.cfg] End of rainbow_crosshair_8.cfg";
