--- a/config/utility/aliases.cfg
+++ b/config/utility/aliases.cfg
@@ -1,18 +1,18 @@
-echoln "[aliases.cfg] Start of aliases.cfg";
+fin_echo "[aliases.cfg] Start of aliases.cfg";
 
 
 
-echoln "[aliases.cfg] ";
-echoln "[aliases.cfg] +---------------+---------------------------------+";
-echoln "[aliases.cfg] | aliases.cfg   | Lists charts of other aliases   |";
-echoln "[aliases.cfg] | fpsbugfix.cfg | Fixes the server-wide fps bug   |";
-echoln "[aliases.cfg] | gamemodes.cfg | Lists all gamemode convars      |";
-echoln "[aliases.cfg] | items.cfg     | Lists aliases to spawn items    |";
-echoln "[aliases.cfg] | keys.cfg      | Lists aliases for listing keys  |";
-echoln "[aliases.cfg] | positions.cfg | Lists aliases for map setpos-es |";
-echoln "[aliases.cfg] +---------------+---------------------------------+";
-echoln "[aliases.cfg] ";
+fin_echo "[aliases.cfg] ";
+fin_echo "[aliases.cfg] +---------------+---------------------------------+";
+fin_echo "[aliases.cfg] | aliases.cfg   | Lists charts of other aliases   |";
+fin_echo "[aliases.cfg] | fpsbugfix.cfg | Fixes the server-wide fps bug   |";
+fin_echo "[aliases.cfg] | gamemodes.cfg | Lists all gamemode convars      |";
+fin_echo "[aliases.cfg] | items.cfg     | Lists aliases to spawn items    |";
+fin_echo "[aliases.cfg] | keys.cfg      | Lists aliases for listing keys  |";
+fin_echo "[aliases.cfg] | positions.cfg | Lists aliases for map setpos-es |";
+fin_echo "[aliases.cfg] +---------------+---------------------------------+";
+fin_echo "[aliases.cfg] ";
 
 
 
-echoln "[aliases.cfg] End of aliases.cfg";
+fin_echo "[aliases.cfg] End of aliases.cfg";
