--- a/config/utility/clear.cfg
+++ b/config/utility/clear.cfg
@@ -1,69 +1,69 @@
-echoln "[clear.cfg] Start of clear.cfg";
+fin_echo "[clear.cfg] Start of clear.cfg";
 
 
 
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
-echoln "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
+fin_echo "[clear.cfg] ";
 
 
 
-echoln "[clear.cfg] End of clear.cfg";
+fin_echo "[clear.cfg] End of clear.cfg";
