--- a/config/utility/keys.cfg
+++ b/config/utility/keys.cfg
@@ -1,22 +1,22 @@
-echoln "[keys.cfg] Start of keys.cfg";
+fin_echo "[keys.cfg] Start of keys.cfg";
 
 
 
-echoln "[keys.cfg] ";
-echoln "[keys.cfg] +-------------------+----------------------------------+";
-echoln "[keys.cfg] | 60pecentrow1.cfg  | ESC through F12                  |";
-echoln "[keys.cfg] | 60pecentrow2.cfg  | Tilde through backspace          |";
-echoln "[keys.cfg] | 60pecentrow3.cfg  | Tab through backslash            |";
-echoln "[keys.cfg] | 60pecentrow4.cfg  | Caps lock through enter          |";
-echoln "[keys.cfg] | 60pecentrow5.cfg  | Left shift through right shift   |";
-echoln "[keys.cfg] | 60pecentrow6.cfg  | Left CTRL through right CTRL     |";
-echoln "[keys.cfg] | 80percentkeys.cfg | Arrow keys and the keys above    |";
-echoln "[keys.cfg] | joystickbinds.cfg | Controller buttons               |";
-echoln "[keys.cfg] | mousekeybinds.cfg | Mouse buttons                    |";
-echoln "[keys.cfg] | numberpadkeys.cfg | All the numpad/keypad keys       |";
-echoln "[keys.cfg] +-------------------+----------------------------------+";
-echoln "[keys.cfg] ";
+fin_echo "[keys.cfg] ";
+fin_echo "[keys.cfg] +-------------------+----------------------------------+";
+fin_echo "[keys.cfg] | 60pecentrow1.cfg  | ESC through F12                  |";
+fin_echo "[keys.cfg] | 60pecentrow2.cfg  | Tilde through backspace          |";
+fin_echo "[keys.cfg] | 60pecentrow3.cfg  | Tab through backslash            |";
+fin_echo "[keys.cfg] | 60pecentrow4.cfg  | Caps lock through enter          |";
+fin_echo "[keys.cfg] | 60pecentrow5.cfg  | Left shift through right shift   |";
+fin_echo "[keys.cfg] | 60pecentrow6.cfg  | Left CTRL through right CTRL     |";
+fin_echo "[keys.cfg] | 80percentkeys.cfg | Arrow keys and the keys above    |";
+fin_echo "[keys.cfg] | joystickbinds.cfg | Controller buttons               |";
+fin_echo "[keys.cfg] | mousekeybinds.cfg | Mouse buttons                    |";
+fin_echo "[keys.cfg] | numberpadkeys.cfg | All the numpad/keypad keys       |";
+fin_echo "[keys.cfg] +-------------------+----------------------------------+";
+fin_echo "[keys.cfg] ";
 
 
 
-echoln "[keys.cfg] End of keys.cfg";
+fin_echo "[keys.cfg] End of keys.cfg";
