--- a/config/aliases/aliases_controls.cfg
+++ b/config/aliases/aliases_controls.cfg
@@ -1,8 +1,8 @@
-echoln "[aliases_controls.cfg] Start of aliases_controls.cfg";
+fin_echo "[aliases_controls.cfg] Start of aliases_controls.cfg";
 
 
 
-echoln "[aliases_controls.cfg] {1} Registering hyper fast spin aliases";
+fin_echo "[aliases_controls.cfg] {1} Registering hyper fast spin aliases";
 alias "+fin_spin" "m_yaw 1000";                                 // Effectively multiplies your sensitivity approximately 45454
 alias "-fin_spin" "m_yaw 0.022";                                // Sets the multiplier back to normal
 // Changing the default m_yaw is controversial, but I can give
@@ -24,9 +24,9 @@ alias "-fin_spin" "m_yaw 0.022";                                // Sets the mult
 // Knowing that we do 16/9 for the decimal value of the ratio,
 // and we do the same thing for your resolution's aspect ratio
 
-echoln "[aliases_controls.cfg] {2} Registering detailed scoreboard aliases";
-alias "+fin_scorenet" "cl_showfps 2; cq_netgraph 1; cl_showmem 3; cl_showpos 1; alias fin_scoreboardfix fin_nothing"; // This gives the scoreboard much more
-alias "-fin_scorenet" "cl_showfps 0; cq_netgraph 0; cl_showmem 0; cl_showpos 0; alias fin_scoreboardfix fin_scoreboard_off";         // information, at the cost of vision.
+fin_echo "[aliases_controls.cfg] {2} Registering detailed scoreboard aliases";
+alias "+fin_scorenet" "cl_showfps 2; cq_netgraph 1; cl_showmem 3; cl_showpos 1; alias fin_scoreboard_fix fin_nothing"; // This gives the scoreboard much more
+alias "-fin_scorenet" "cl_showfps 0; cq_netgraph 0; cl_showmem 0; cl_showpos 0; alias fin_scoreboard_fix fin_scoreboard_off";         // information, at the cost of vision.
 
 
 alias "fin_scorenet"    "fin_scoreneton";                       // Toggle alias for the scorenet
@@ -37,7 +37,7 @@ alias "fin_scoreboard_fix" "fin_nothing";
 alias "fin_scoreboard_off" "-showscores; -showscores";
 
 
-echoln "[aliases_controls.cfg] {3} Registering perfect crouch jump aliases";
+fin_echo "[aliases_controls.cfg] {3} Registering perfect crouch jump aliases";
 alias "+fin_cjump" "+fin_desubtick_jump; +fin_desubtick_duck;  alias fin_crouched";                     // This is a crouch jump bind, tapping the key performs
 alias "-fin_cjump" "-fin_desubtick_jump; fin_jumped;           alias fin_crouched -fin_desubtick_duck"; // a perfect crouch jump, holding it keeps you crouched.
 
@@ -47,38 +47,38 @@ alias "fin_jumped"  "-fin_desubtick_duck";
 alias "fin_crouched" "-fin_desubtick_duck";
 
 
-echoln "[aliases_controls.cfg] {4} Registering better +use aliases";     // For the use spam part, credit to: https://reddit.com/comments/5xila4
+fin_echo "[aliases_controls.cfg] {4} Registering better +use aliases";     // For the use spam part, credit to: https://reddit.com/comments/5xila4
 alias "+fin_betteruse" "+fin_desubtick_use; bind mwheeldown fin_usespam;        bind mwheelup  fin_usespam;         gameinstructor_enable true";
 alias "-fin_betteruse" "-fin_desubtick_use; bind mwheeldown fin_highveljump;    bind mwheelup +fin_desubtick_jump;  gameinstructor_enable false";
 alias "fin_usespam"    "-fin_desubtick_use; bind mwheeldown +fin_desubtick_use; bind mwheelup +fin_desubtick_use";
 
 
-echoln "[aliases_controls.cfg] {5} Registering Hold-for-knife aliases";
+fin_echo "[aliases_controls.cfg] {5} Registering Hold-for-knife aliases";
 alias "+fin_knife" "+fin_autoknifeinspect";                     // Hold-for-knife bind, while holding the key you will
 alias "-fin_knife" "lastinv";                                   // hold your knife and go back to your last gun on release
 
 
-echoln "[aliases_controls.cfg] {6} Registering jump throw aliases";
+fin_echo "[aliases_controls.cfg] {6} Registering jump throw aliases";
 alias "+fin_jthrow" "+fin_desubtick_jump; -fin_desubtick_attack; -fin_desubtick_attack2";
 alias "-fin_jthrow" "-fin_desubtick_jump";
 
 
-echoln "[aliases_controls.cfg] {7} Registering alias to disable jumping while shooting";  // Credit to: https://reddit.com/comments/73wcsz
+fin_echo "[aliases_controls.cfg] {7} Registering alias to disable jumping while shooting";  // Credit to: https://reddit.com/comments/73wcsz
 alias "+noscroll_attack" "+fin_desubtick_attack; bind mwheeldown fin_nothing;     bind mwheelup fin_nothing";
 alias "-noscroll_attack" "-fin_desubtick_attack; bind mwheeldown fin_highveljump; bind mwheelup +fin_desubtick_jump";
 
 
-echoln "[aliases_controls.cfg] {8} Registering Anti-AFK aliases";
+fin_echo "[aliases_controls.cfg] {8} Registering Anti-AFK aliases";
 alias "fin_antiafk"  "+fin_desubtick_left; +fin_desubtick_moveright; +fin_desubtick_attack2; +fin_desubtick_sprint";
 alias "fin_antiafk2" "-fin_desubtick_left; -fin_desubtick_moveright; -fin_desubtick_attack2; -fin_desubtick_sprint";
 
 
-echoln "[aliases_controls.cfg] {9} Registering long jump aliases";
+fin_echo "[aliases_controls.cfg] {9} Registering long jump aliases";
 alias "+fin_longjump" "+fin_desubtick_duck; +fin_desubtick_jump; fin_forward_released";
 alias "-fin_longjump" "-fin_desubtick_duck; -fin_desubtick_jump; ";
 
 
-echoln "[aliases_controls.cfg] {10} Registering null-cancelling movement aliases";
+fin_echo "[aliases_controls.cfg] {10} Registering null-cancelling movement aliases";
 alias "+fin_ncmforward"    "-fin_desubtick_back;    +fin_desubtick_forward; alias fin_ncmcancelforward fin_fix_forward";
 alias "+fin_ncmback"       "-fin_desubtick_forward; +fin_desubtick_back;    alias fin_ncmcancelback    fin_fix_back";
 alias "+fin_ncmleft"       "-fin_desubtick_right;   +fin_desubtick_left;    alias fin_ncmcancelleft    fin_fix_left";
@@ -97,157 +97,15 @@ alias "fin_ncmcancelleft"    "";
 alias "fin_ncmcancelright"   "";
 
 
-echoln "[aliases_controls.cfg] {11} Registering desubtick aliases";
-alias "fin_desubtick_attack"                 "exec ./config/desubtick/attack.cfg";
-alias "fin_desubtick_attack2"                "exec ./config/desubtick/attack2.cfg";
-alias "fin_desubtick_back"                   "exec ./config/desubtick/back.cfg";
-alias "fin_desubtick_bugvoice"               "exec ./config/desubtick/bugvoice.cfg";
-alias "fin_desubtick_camdistance"            "exec ./config/desubtick/camdistance.cfg";
-alias "fin_desubtick_camin"                  "exec ./config/desubtick/camin.cfg";
-alias "fin_desubtick_cammousemove"           "exec ./config/desubtick/cammousemove.cfg";
-alias "fin_desubtick_camout"                 "exec ./config/desubtick/camout.cfg";
-alias "fin_desubtick_campitchdown"           "exec ./config/desubtick/campitchdown.cfg";
-alias "fin_desubtick_campitchup"             "exec ./config/desubtick/campitchup.cfg";
-alias "fin_desubtick_camyawleft"             "exec ./config/desubtick/camyawleft.cfg";
-alias "fin_desubtick_camyawright"            "exec ./config/desubtick/camyawright.cfg";
-alias "fin_desubtick_duck"                   "exec ./config/desubtick/duck.cfg";
-alias "fin_desubtick_forward"                "exec ./config/desubtick/forward.cfg";
-alias "fin_desubtick_jump"                   "exec ./config/desubtick/jump.cfg";
-alias "fin_desubtick_klook"                  "exec ./config/desubtick/klook.cfg";
-alias "fin_desubtick_left"                   "exec ./config/desubtick/left.cfg";
-alias "fin_desubtick_movedown"               "exec ./config/desubtick/movedown.cfg";
-alias "fin_desubtick_moveup"                 "exec ./config/desubtick/moveup.cfg";
-alias "fin_desubtick_reload"                 "exec ./config/desubtick/reload.cfg";
-alias "fin_desubtick_right"                  "exec ./config/desubtick/right.cfg";
-alias "fin_desubtick_showscores"             "exec ./config/desubtick/showscores.cfg";
-alias "fin_desubtick_sprint"                 "exec ./config/desubtick/sprint.cfg";
-alias "fin_desubtick_strafe"                 "exec ./config/desubtick/strafe.cfg";
-alias "fin_desubtick_turndown"               "exec ./config/desubtick/turndown.cfg";
-alias "fin_desubtick_turnleft"               "exec ./config/desubtick/turnleft.cfg";
-alias "fin_desubtick_turnright"              "exec ./config/desubtick/turnright.cfg";
-alias "fin_desubtick_turnup"                 "exec ./config/desubtick/turnup.cfg";
-alias "fin_desubtick_use"                    "exec ./config/desubtick/use.cfg";
-alias "fin_desubtick_voicerecord"            "exec ./config/desubtick/voicerecord.cfg";
-alias "fin_desubtick_zoom"                   "exec ./config/desubtick/zoom.cfg";
-alias "fin_desubtick_cl_show_team_equipment" "exec ./config/desubtick/cl_show_team_equipment.cfg";
-alias "fin_desubtick_lookatweapon"           "exec ./config/desubtick/lookatweapon.cfg";
-alias "fin_desubtick_quickbuyradial"         "exec ./config/desubtick/quickbuyradial.cfg";
-alias "fin_desubtick_quickgearradial"        "exec ./config/desubtick/quickgearradial.cfg";
-alias "fin_desubtick_quickgrenaderadial"     "exec ./config/desubtick/quickgrenaderadial.cfg";
-alias "fin_desubtick_quickinv"               "exec ./config/desubtick/quickinv.cfg";
-alias "fin_desubtick_radialradio"            "exec ./config/desubtick/radialradio.cfg";
-alias "fin_desubtick_radialradio2"           "exec ./config/desubtick/radialradio2.cfg";
-alias "fin_desubtick_radialradio3"           "exec ./config/desubtick/radialradio3.cfg";
-alias "fin_desubtick_spray_menu"             "exec ./config/desubtick/spray_menu.cfg";
-alias "fin_desubtick_attack"                 "exec ./config/desubtick/attack.cfg";
-alias "fin_desubtick_attack2"                "exec ./config/desubtick/attack2.cfg";
-alias "fin_desubtick_back"                   "exec ./config/desubtick/back.cfg";
-alias "fin_desubtick_bugvoice"               "exec ./config/desubtick/bugvoice.cfg";
-alias "fin_desubtick_camdistance"            "exec ./config/desubtick/camdistance.cfg";
-alias "fin_desubtick_camin"                  "exec ./config/desubtick/camin.cfg";
-alias "fin_desubtick_cammousemove"           "exec ./config/desubtick/cammousemove.cfg";
-alias "fin_desubtick_camout"                 "exec ./config/desubtick/camout.cfg";
-alias "fin_desubtick_campitchdown"           "exec ./config/desubtick/campitchdown.cfg";
-alias "fin_desubtick_campitchup"             "exec ./config/desubtick/campitchup.cfg";
-alias "fin_desubtick_camyawleft"             "exec ./config/desubtick/camyawleft.cfg";
-alias "fin_desubtick_camyawright"            "exec ./config/desubtick/camyawright.cfg";
-alias "fin_desubtick_duck"                   "exec ./config/desubtick/duck.cfg";
-alias "fin_desubtick_forward"                "exec ./config/desubtick/forward.cfg";
+
+fin_echo "[aliases_controls.cfg] {13} Registering free-acceleration bhop alias";
+alias "fin_highveljump" "+fin_desubtick_jump; -fin_desubtick_back; -fin_desubtick_jump";
 
 
-echoln "[aliases_controls.cfg] {12} Registering desubtick aliases";
-alias "+fin_desubtick_attack"                 "exec ./config/desubtick/+attack.cfg";
-alias "+fin_desubtick_attack2"                "exec ./config/desubtick/+attack2.cfg";
-alias "+fin_desubtick_back"                   "exec ./config/desubtick/+back.cfg";
-alias "+fin_desubtick_bugvoice"               "exec ./config/desubtick/+bugvoice.cfg";
-alias "+fin_desubtick_camdistance"            "exec ./config/desubtick/+camdistance.cfg";
-alias "+fin_desubtick_camin"                  "exec ./config/desubtick/+camin.cfg";
-alias "+fin_desubtick_cammousemove"           "exec ./config/desubtick/+cammousemove.cfg";
-alias "+fin_desubtick_camout"                 "exec ./config/desubtick/+camout.cfg";
-alias "+fin_desubtick_campitchdown"           "exec ./config/desubtick/+campitchdown.cfg";
-alias "+fin_desubtick_campitchup"             "exec ./config/desubtick/+campitchup.cfg";
-alias "+fin_desubtick_camyawleft"             "exec ./config/desubtick/+camyawleft.cfg";
-alias "+fin_desubtick_camyawright"            "exec ./config/desubtick/+camyawright.cfg";
-alias "+fin_desubtick_duck"                   "exec ./config/desubtick/+duck.cfg";
-alias "+fin_desubtick_forward"                "exec ./config/desubtick/+forward.cfg";
-alias "+fin_desubtick_jump"                   "exec ./config/desubtick/+jump.cfg";
-alias "+fin_desubtick_klook"                  "exec ./config/desubtick/+klook.cfg";
-alias "+fin_desubtick_left"                   "exec ./config/desubtick/+left.cfg";
-alias "+fin_desubtick_movedown"               "exec ./config/desubtick/+movedown.cfg";
-alias "+fin_desubtick_moveup"                 "exec ./config/desubtick/+moveup.cfg";
-alias "+fin_desubtick_reload"                 "exec ./config/desubtick/+reload.cfg";
-alias "+fin_desubtick_right"                  "exec ./config/desubtick/+right.cfg";
-alias "+fin_desubtick_showscores"             "exec ./config/desubtick/+showscores.cfg";
-alias "+fin_desubtick_sprint"                 "exec ./config/desubtick/+sprint.cfg";
-alias "+fin_desubtick_strafe"                 "exec ./config/desubtick/+strafe.cfg";
-alias "+fin_desubtick_turndown"               "exec ./config/desubtick/+turndown.cfg";
-alias "+fin_desubtick_turnleft"               "exec ./config/desubtick/+turnleft.cfg";
-alias "+fin_desubtick_turnright"              "exec ./config/desubtick/+turnright.cfg";
-alias "+fin_desubtick_turnup"                 "exec ./config/desubtick/+turnup.cfg";
-alias "+fin_desubtick_use"                    "exec ./config/desubtick/+use.cfg";
-alias "+fin_desubtick_voicerecord"            "exec ./config/desubtick/+voicerecord.cfg";
-alias "+fin_desubtick_zoom"                   "exec ./config/desubtick/+zoom.cfg";
-alias "+fin_desubtick_cl_show_team_equipment" "exec ./config/desubtick/+cl_show_team_equipment.cfg";
-alias "+fin_desubtick_lookatweapon"           "exec ./config/desubtick/+lookatweapon.cfg";
-alias "+fin_desubtick_quickbuyradial"         "exec ./config/desubtick/+quickbuyradial.cfg";
-alias "+fin_desubtick_quickgearradial"        "exec ./config/desubtick/+quickgearradial.cfg";
-alias "+fin_desubtick_quickgrenaderadial"     "exec ./config/desubtick/+quickgrenaderadial.cfg";
-alias "+fin_desubtick_quickinv"               "exec ./config/desubtick/+quickinv.cfg";
-alias "+fin_desubtick_radialradio"            "exec ./config/desubtick/+radialradio.cfg";
-alias "+fin_desubtick_radialradio2"           "exec ./config/desubtick/+radialradio2.cfg";
-alias "+fin_desubtick_radialradio3"           "exec ./config/desubtick/+radialradio3.cfg";
-alias "+fin_desubtick_spray_menu"             "exec ./config/desubtick/+spray_menu.cfg";
-alias "-fin_desubtick_attack"                 "exec ./config/desubtick/-attack.cfg";
-alias "-fin_desubtick_attack2"                "exec ./config/desubtick/-attack2.cfg";
-alias "-fin_desubtick_back"                   "exec ./config/desubtick/-back.cfg";
-alias "-fin_desubtick_bugvoice"               "exec ./config/desubtick/-bugvoice.cfg";
-alias "-fin_desubtick_camdistance"            "exec ./config/desubtick/-camdistance.cfg";
-alias "-fin_desubtick_camin"                  "exec ./config/desubtick/-camin.cfg";
-alias "-fin_desubtick_cammousemove"           "exec ./config/desubtick/-cammousemove.cfg";
-alias "-fin_desubtick_camout"                 "exec ./config/desubtick/-camout.cfg";
-alias "-fin_desubtick_campitchdown"           "exec ./config/desubtick/-campitchdown.cfg";
-alias "-fin_desubtick_campitchup"             "exec ./config/desubtick/-campitchup.cfg";
-alias "-fin_desubtick_camyawleft"             "exec ./config/desubtick/-camyawleft.cfg";
-alias "-fin_desubtick_camyawright"            "exec ./config/desubtick/-camyawright.cfg";
-alias "-fin_desubtick_duck"                   "exec ./config/desubtick/-duck.cfg";
-alias "-fin_desubtick_forward"                "exec ./config/desubtick/-forward.cfg";
-alias "-fin_desubtick_jump"                   "exec ./config/desubtick/-jump.cfg";
-alias "-fin_desubtick_klook"                  "exec ./config/desubtick/-klook.cfg";
-alias "-fin_desubtick_left"                   "exec ./config/desubtick/-left.cfg";
-alias "-fin_desubtick_movedown"               "exec ./config/desubtick/-movedown.cfg";
-alias "-fin_desubtick_moveup"                 "exec ./config/desubtick/-moveup.cfg";
-alias "-fin_desubtick_reload"                 "exec ./config/desubtick/-reload.cfg";
-alias "-fin_desubtick_right"                  "exec ./config/desubtick/-right.cfg";
-alias "-fin_desubtick_showscores"             "exec ./config/desubtick/-showscores.cfg";
-alias "-fin_desubtick_sprint"                 "exec ./config/desubtick/-sprint.cfg";
-alias "-fin_desubtick_strafe"                 "exec ./config/desubtick/-strafe.cfg";
-alias "-fin_desubtick_turndown"               "exec ./config/desubtick/-turndown.cfg";
-alias "-fin_desubtick_turnleft"               "exec ./config/desubtick/-turnleft.cfg";
-alias "-fin_desubtick_turnright"              "exec ./config/desubtick/-turnright.cfg";
-alias "-fin_desubtick_turnup"                 "exec ./config/desubtick/-turnup.cfg";
-alias "-fin_desubtick_use"                    "exec ./config/desubtick/-use.cfg";
-alias "-fin_desubtick_voicerecord"            "exec ./config/desubtick/-voicerecord.cfg";
-alias "-fin_desubtick_zoom"                   "exec ./config/desubtick/-zoom.cfg";
-alias "-fin_desubtick_cl_show_team_equipment" "exec ./config/desubtick/-cl_show_team_equipment.cfg";
-alias "-fin_desubtick_lookatweapon"           "exec ./config/desubtick/-lookatweapon.cfg";
-alias "-fin_desubtick_quickbuyradial"         "exec ./config/desubtick/-quickbuyradial.cfg";
-alias "-fin_desubtick_quickgearradial"        "exec ./config/desubtick/-quickgearradial.cfg";
-alias "-fin_desubtick_quickgrenaderadial"     "exec ./config/desubtick/-quickgrenaderadial.cfg";
-alias "-fin_desubtick_quickinv"               "exec ./config/desubtick/-quickinv.cfg";
-alias "-fin_desubtick_radialradio"            "exec ./config/desubtick/-radialradio.cfg";
-alias "-fin_desubtick_radialradio2"           "exec ./config/desubtick/-radialradio2.cfg";
-alias "-fin_desubtick_radialradio3"           "exec ./config/desubtick/-radialradio3.cfg";
-alias "-fin_desubtick_spray_menu"             "exec ./config/desubtick/-spray_menu.cfg";
-
-
-echoln "[aliases_controls.cfg] {13} Registering free-acceleration bhop alias";
-alias "fin_highveljump" "+fin_desubtick_jump; -fin_desubtick_back; -fin_desubtick_jump;";
-
-
-echoln "[aliases_controls.cfg] {14} Registering jump bug aliases";
+fin_echo "[aliases_controls.cfg] {14} Registering jump bug aliases";
 alias "+fin_jumpbug" "-fin_desubtick_duck; +fin_desubtick_jump";
 alias "-fin_jumpbug" "-fin_desubtick_jump";
 
 
 
-echoln "[aliases_controls.cfg] End of aliases_controls.cfg";
+fin_echo "[aliases_controls.cfg] End of aliases_controls.cfg";
