--- a/config/keys/mousekeybinds.cfg
+++ b/config/keys/mousekeybinds.cfg
@@ -1,8 +1,8 @@
-echoln "[mousekeybinds.cfg] Start of mousekeybinds.cfg";
+fin_echo "[mousekeybinds.cfg] Start of mousekeybinds.cfg";
 
 
 
-echoln "[mousekeybinds.cfg] ";
+fin_echo "[mousekeybinds.cfg] ";
 bind "MOUSE1";
 bind "MOUSE2";
 bind "MOUSE3";
@@ -10,8 +10,8 @@ bind "MOUSE4";
 bind "MOUSE5";
 bind "MWHEELUP";
 bind "MWHEELDOWN";
-echoln "[mousekeybinds.cfg] ";
+fin_echo "[mousekeybinds.cfg] ";
 
 
 
-echoln "[mousekeybinds.cfg] End of mousekeybinds.cfg";
+fin_echo "[mousekeybinds.cfg] End of mousekeybinds.cfg";
