--- a/config/primary/init.cfg
+++ b/config/primary/init.cfg
@@ -5,9 +5,9 @@ echoln "[init.cfg] Start of init.cfg";
 echoln "[init.cfg] {1} Initializing";
 hostname "Fin's CS2 Config 5.0.0-beta9 - github.com/bigfinfrank/cfg"; // Sets the server name shown in the scoreboard
 alias "fin_version" "echoln 5.0.0-beta9";                       // Sets version number to an alias (can be output with: "alias fin_version")
+alias "fin_echo" "echoln";                                      // Allows easy changing between echo and echoln commands.
 sv_steamgroup "42297947";                                       // The ID of the steam group that this server belongs to. You can find your group's ID on the admin profile page in the steam community. (currently https://steamcommunity.com/groups/advancedcfg)
 cl_clanid "42297947";                                           // Current clan ID for name decoration
-
 
 echoln "[aliases_init.cfg] {2} Removing feature/command limitations";
 sv_unlockedchapters "2147483647";                               // Highest unlocked game chapter.
