--- a/config/rainbow_crosshair/rainbow_crosshair_4.cfg
+++ b/config/rainbow_crosshair/rainbow_crosshair_4.cfg
@@ -1,3 +1,7 @@
+fin_echo "[rainbow_crosshair_4.cfg] Start of rainbow_crosshair_4.cfg";
+
+
+
 alias "fin_rainbow_crosshair_303" "cl_crosshaircolor_r 188; cl_crosshaircolor_g 194;                          alias fin_rainbow_crosshair fin_rainbow_crosshair_304";
 alias "fin_rainbow_crosshair_304" "cl_crosshaircolor_r 187; cl_crosshaircolor_g 195;                          alias fin_rainbow_crosshair fin_rainbow_crosshair_305";
 alias "fin_rainbow_crosshair_305" "cl_crosshaircolor_r 186; cl_crosshaircolor_g 196;                          alias fin_rainbow_crosshair fin_rainbow_crosshair_306";
@@ -100,3 +104,7 @@ alias "fin_rainbow_crosshair_401" "cl_crosshaircolor_r  83;                     
 alias "fin_rainbow_crosshair_402" "cl_crosshaircolor_r  82;                          cl_crosshaircolor_b  48; alias fin_rainbow_crosshair fin_rainbow_crosshair_403";
 alias "fin_rainbow_crosshair_403" "cl_crosshaircolor_r  81;                                                   alias fin_rainbow_crosshair fin_rainbow_crosshair_404";
 // Credit to https://github.com/T1ckbase/cs2-rainbow-crosshair for smoother values
+
+
+
+fin_echo "[rainbow_crosshair_4.cfg] End of rainbow_crosshair_4.cfg";
