--- a/config/utility/grammarly/exit.cfg
+++ b/config/utility/grammarly/exit.cfg
@@ -1,4 +1,4 @@
-echoln "[exit.cfg] Start of exit.cfg";
+fin_echo "[exit.cfg] Start of exit.cfg";
 
 
 
@@ -56,4 +56,4 @@ alias "xeit" "exit";
 
 
 
-echoln "[exit.cfg] End of exit.cfg";
+fin_echo "[exit.cfg] End of exit.cfg";
