--- a/config/utility/grammarly/quit.cfg
+++ b/config/utility/grammarly/quit.cfg
@@ -1,4 +1,4 @@
-echoln "[quit.cfg] Start of quit.cfg";
+fin_echo "[quit.cfg] Start of quit.cfg";
 
 
 
@@ -52,4 +52,4 @@ alias "uqit" "quit";
 
 
 
-echoln "[quit.cfg] End of quit.cfg";
+fin_echo "[quit.cfg] End of quit.cfg";
